internal/compiler/testdata/fuzz/crashers/8ce116e06950641fa5a1d821dc1b170ae6a36d34.output
panic: runtime error: invalid memory address or nil pointer dereference
[signal SIGSEGV: segmentation violation code=0x1 addr=0x0 pc=0x1141232]

goroutine 1 [running]:
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000d120, 0x0, 0xc000010880, 0xb, 0x1, 0x9a)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:241 +0x52
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000d120, 0xc00007e000, 0x11a8840, 0xc000010880, 0x0, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:244 +0x9b5
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000d120, 0xc000075b80, 0xc, 0x0, 0x100000000000002, 0xc00001769b)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:257 +0x7a2
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelectCoreValues(0xc00000d120, 0xc000068780, 0x100b456, 0xc00013bc00, 0x40, 0x38)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:125 +0x11b
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelectCore(0xc00000d120, 0xc000068780, 0x0, 0xc000071c60, 0x1010f93, 0xc00013bc00)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:115 +0xb1
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelect(0xc00000d120, 0xc0000663c0, 0x0, 0x2, 0xc0000176a7, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:70 +0xb6
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileInternal(0xc00000d120, 0xc000064e00, 0x0, 0x2, 0xc0000176a7, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:54 +0x7e
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).Compile(0xc00000d120, 0xc000064e00, 0x0, 0x0, 0x0, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:34 +0x54
github.com/tomarrell/lbadd/internal/compiler.Fuzz(0x8a21000, 0xc, 0xc, 0x3)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler_fuzzy.go:38 +0x3a4
go-fuzz-dep.Main(0xc000071f70, 0x1, 0x1)
	go-fuzz-dep/main.go:36 +0x1ad
main.main()
	github.com/tomarrell/lbadd/internal/compiler/go.fuzz.main/main.go:15 +0x52
exit status 2